force-app/main/default/objects/CommercientSF6__ArCustStkXref__c/CommercientSF6__ArCustStkXref__c.object-meta.xml
<CustomObject>
    <label>Syspro Customer Stock Code XRef</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Syspro Customer Stock Code XRefs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>