force-app/main/default/objects/CommercientSF6__ArCustStkXref__c/fields/CommercientSF6__CustStockCode__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF6__CustStockCode__c</fullName>
    <description>CustStockCode</description>
    <label>CustStockCode</label>
    <length>255</length>
    <type>Text</type>
</CustomField>