force-app/main/default/objects/CommercientSF6__ArCustStkXref__c/fields/CommercientSF6__Product__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF6__Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Syspro Customer Stock Code XRefs</relationshipLabel>
    <relationshipName>Syspro_Customer_Stock_Code_XRefs</relationshipName>
    <type>Lookup</type>
</CustomField>