force-app/main/default/objects/CommercientSF6__ArCustStkXref__c/listViews/CommercientSF6__All.listView-meta.xml
<ListView>
    <fullName>CommercientSF6__All</fullName>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>